apps/freshrss/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: freshrss
  namespace: freshrss
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: authelia-authelia@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: freshrss.sanxer.dk
      http:
        paths:
          - backend:
              service:
                name: freshrss
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - freshrss.sanxer.dk
      secretName: freshrss-tls
